Changes made - Added Alertbox for the display of the text. - Show different box based on the data. -Changed the landscape mode of the scanner to potrait.

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="open">open</string>
     <string name="cancel">cancel</string>
     <string name="url">result.content()</string>
+    <string name="choose_title">Open URL with</string>
+    <string name="Title">Data from Scan</string>
+    <string name="copy">Copy text</string>
+    <string name="display_text">Copied Text</string>
 </resources>
