--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="display_text">Copied Text</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="validate">Validate link</string>
+    <string name="retrieve">Retrieve the result</string>
+    <string name="result">Get Result</string>
+    <string name="analysis">Analysis</string>
 </resources>
