--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,18 +1,14 @@
 <resources>
     <string name="app_name">SPRY Scanner</string>
-    <string name="open_url">Open URL?</string>
-    <string name="Open">open</string>
     <string name="open">open</string>
-    <string name="cancel">cancel</string>
-    <string name="url">result.content()</string>
+    <string name="cancel">Cancel</string>
     <string name="choose_title">Open URL with</string>
     <string name="Title">Data from Scan</string>
     <string name="copy">Copy text</string>
-    <string name="display_text">Copied Text</string>
-    <string name="title_activity_main">MainActivity</string>
-    <string name="action_settings">Settings</string>
     <string name="validate">Validate link</string>
     <string name="retrieve">Retrieve the result</string>
     <string name="result">Get Result</string>
-    <string name="analysis">Analysis</string>
+    <string name="logo_description">Logo of the app</string>
+    <string name="button_scan">Scan QR Code</string>
+    <string name="button_image">Scan QR Image</string>
 </resources>
