--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SPRY Scanner</string>
+    <string name="app_name">AMP QR Scanner</string>
     <string name="open">open</string>
     <string name="cancel">Cancel</string>
     <string name="choose_title">Open URL with</string>
@@ -17,4 +17,5 @@
     <string name="enter">Enter here</string>
     <string name="generator">Generate QR Code</string>
     <string name="genpass">Generate with Key</string>
+    <string name="Redirect">The url is redirecting to</string>
 </resources>
